# frontg8lib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
cmake/modules/: CUTE.cmake  ClangSanitizers.cmake  CodeCoverage.cmake  GenerateProtobufSource.cmake
doc/: Makefile  conf.py  index.rst
doc/frontg8c/: error.rst  index.rst
doc/frontg8c/protocol/: index.rst
doc/frontg8c/protocol/message/: encrypted.rst
include/: CMakeLists.txt  frontg8.h  frontg8.hpp
include/frontg8/: error.h  error.hpp  visibility.h
include/frontg8/protocol/message/: encrypted.h  encrypted.hpp
include/impl/: error.hpp
include/impl/protocol/message/: encrypted.hpp
protobuf/: CMakeLists.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  c_api_encrypted_message.c
src/frontg8/: CMakeLists.txt  error.cpp  lifetime.cpp
src/frontg8/protocol/: CMakeLists.txt
src/frontg8/protocol/message/: encrypted.cpp
src/impl/: CMakeLists.txt
src/impl/protocol/: CMakeLists.txt
src/impl/protocol/message/: encrypted.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  error_c_api_test.cpp  error_cpp_api_test.cpp
test/api/protocol/message/: CMakeLists.txt  encrypted_api_test.cpp  encrypted_c_api_test.cpp  encrypted_cpp_api_test.cpp
test/impl/: CMakeLists.txt
test/impl/protocol/: CMakeLists.txt
test/impl/protocol/message/: CMakeLists.txt  encrypted_impl_test.cpp
test/protocol/: CMakeLists.txt
test/protocol/message/: CMakeLists.txt  encrypted_test.cpp
